objects/Opportunity_Part_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>AccountIdGPLid__c</fullName>
        <description>Used for the JDA Integration</description>
        <formula>CASESAFEID (Opportunity_Part__r.Opportunity__r.AccountId)+ CASESAFEID (Opportunity_Part__r.Part__r.Product_Hierarchy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountIdGPLid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <label>Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomOpportunityId__c</fullName>
        <formula>Opportunity_Part__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomOpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Month__c</fullName>
        <description>This is used for queries to access the right records</description>
        <inlineHelpText>This is used for queries to access the right records</inlineHelpText>
        <label>Last Day of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast__c</fullName>
        <label>Opportunity Forecast</label>
        <referenceTo>Opportunity_Forecast__c</referenceTo>
        <relationshipLabel>Opportunity Part Forecast</relationshipLabel>
        <relationshipName>Opportunity_Part_Forecast</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Part__c</fullName>
        <label>Opportunity Part</label>
        <referenceTo>Opportunity_Part__c</referenceTo>
        <relationshipLabel>Opportunity Part Forecast</relationshipLabel>
        <relationshipName>Opportunity_Part_Forecast</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The number (including fractions of parts) that make up this forecasted part</description>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Q1-Q4</description>
        <label>Quarter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>forecast_value2__c</fullName>
        <formula>(Opportunity_Part__r.Total_Price__c / Opportunity_Part__r.Opportunity__r.Parts_Total__c) * Opportunity_Forecast__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>forecast_value2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>year_and_month__c</fullName>
        <description>An Integer representation of the year and month.  Used for easy comparisons in SOQL queries</description>
        <label>year and month</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Part Forecast</label>
    <nameField>
        <label>Opportunity Part Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Part Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>